# catdex

./: .env.example  Cargo.toml
src/: main.rs
static/: index.html
static/css/: index.css
